# todo_project

./: .gitignore  pyproject.toml
account/: admin.py  backends.py  forms.py  models.py  urls.py
account/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_updated_at.py
account/templates/auth/: password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
account/templates/registration/: login.html
account/views/: password.py  profile.py  user.py
blog/: admin.py  forms.py  models.py  urls.py
blog/migrations/: 0001_initial.py
blog/templates/: base.html
blog/views/: blog.py  bookmark.py  category.py  comment.py  home.py  like_dislike.py  post.py
config/: settings.py  urls.py
static/css/: styles.css
staticfiles/css/: styles.css
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_remove_post_category_remove_comment_owner_and_more.py
templates/: base.html
templates/account/: edit_profile.html  profile.html
templates/account/auth/: password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_done.html  (+2 more)
templates/blog/: bookmark.html  category_detail.html  category_list.html  index.html  post_create.html  post_detail.html  post_edit.html  post_list.html
templates/includes/: search.html  sort.html
templates/tasks/: index.html  task_completed.html  task_create.html  task_detail.html  task_edit.html  task_list.html
(+2 files in other folders)
