[tool.poetry]
name = "mini-project"
version = "0.1.0"
description = ""
authors = ["KenArsen <kenzhegulov.kgz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
