[tool.poetry]
name = "mini-project"
version = "0.1.0"
description = ""
authors = ["Juma <jums92547@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
